1. Updated with updated plugin 1.1 & AppKey sdk 1.2 2. Update AppKeyManager to allow debug logging to be controlled via the Unity GUI. 3. Create a prefab for the AppKeyManager game object to ease integration

--- a/Assembly-CSharp-firstpass-vs.csproj
+++ b/Assembly-CSharp-firstpass-vs.csproj
@@ -5,11 +5,11 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{E58A0276-77BF-59A7-572E-7D59B7099FBE}</ProjectGuid>
+	<ProjectGuid>{23BF2940-C884-6341-C35C-7CC67006B6CC}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
-	<AssemblyName>Assembly-CSharp</AssemblyName>
+	<AssemblyName>Assembly-CSharp-firstpass</AssemblyName>
 	<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
 	<FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -44,12 +44,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\main.cs" />
+     <Compile Include="Assets\Plugins\AppKey\AppKeyEventListener.cs" />
+     <Compile Include="Assets\Plugins\AppKey\AppKeyManager.cs" />
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
-      <Project>{23BF2940-C884-6341-C35C-7CC67006B6CC}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
